--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^5.0.0-rc.2"
   },
